--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orange RPG</title>
+    <script src="./js/three.js"></script>
+    <script src="./js/ar.js"></script>
 </head>
-<body>
-    <h1>Hello</h1>
+<body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs="sourceType: webcam;">
+        <a-marker preset="hiro">
+            <!-- Coloque seu objeto 3D aqui -->
+            <a-entity
+                gltf-model="./house.gltf"
+                scale="0.1 0.1 0.1"
+            ></a-entity>
+        </a-marker>
+        <a-entity camera></a-entity>
+    </a-scene>
 </body>
 </html>
